# probeops-backend

./: .coverage  .env.backend.template  .env.template  .pre-commit-config.yaml  .replit  DEPLOYMENT.md  DOCKER_REBUILD.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  README.md  api_blueprint.py  app.py  app_config.py  app_flask.py  app_starter.py  asgi.py  auth.py  check_db_tables.py  check_prod_roles.py  check_prod_tables.sh  check_prod_users.sh  deployment.md  docker-compose.backend.yml  docker-compose.prod.yml  docker-compose.prod.yml.old  docker-compose.yml  fix_db_direct.py  fix_user_emails.py  fix_user_emails.sh  fix_user_emails_flask.py  fix_users_simple.py  flask-cli.sh  flask_app.py  flask_server.py  gunicorn_conf.py  gunicorn_config.py  main.py  main_flask.py  manage.py  models.py  (+30 more)
.github/workflows/: cicd.yml
app/: __init__.py
app/auth/: dependencies.py  routes.py  schemas.py  utils.py
app/config/: settings.py
app/db/: models.py  session.py
app/probes/: __init__.py  routes.py  schemas.py
app/utils/: command.py  response.py
attached_assets/: Pasted--2025-05-10-04-46-14-0000-1-INFO-Using-worker-sync-2025-05-10-04-46-14-0000-10-INFO-B-1746853017439.txt  Pasted--File-usr-local-lib-python3-11-site-packages-sqlalchemy-engine-base-py-line-1964-in-exec-sing-1746849861989.txt  Pasted--SQL-SELECT-users-id-AS-users-id--1746854480282.txt  Pasted-127-0-0-1-10-May-2025-08-45-53-0000-GET-api-health-HTTP-1-1-200-64-curl-7-88-1-2025-1746866901575.txt  Pasted-LINE-1-users-hashed-password-AS-users-hashed-password-users-pass--1746850383926.txt  Pasted-PostgreSQL-is-ready-ProbeOps-API-Configuration-API-Port-5000-Database-Host-db-Environm-1746854999799.txt  Pasted-ps-api-INFO-probeops-app-4f59efac-Response-401-POST-api-users-login-probeops-api-172-18-0-1746875311363.txt  Pasted-ubuntu-ip-172-16-0-80-probeops-backend-cat-start-sh-bin-bash-ProbeOps-API-Docker-Startup-1746731343971.txt  Pasted-ubuntu-ip-172-16-0-80-probeops-backend-fix-user-emails-sh-Fixing-missing-email-fields-for-admi-1746887183555.txt
docs/: API_EXAMPLES.md  CICD.md  DEPLOYMENT_AWS.md  DOCKER_CONFIGURATION.md  FRONTEND_INTEGRATION.md  INTERNAL_TESTING.md  POSTMAN_GUIDE.md  PRODUCTION_CHECKLIST.md  RBAC_DOCUMENTATION.md  START_SCRIPT.md
migrations/versions/: 691e893eef87_initial_migration.py  aa7a330cf46f_remove_legacy_password_hash_column.py  add_compatibility_columns.py
probeops/: README.md  __init__.py  app.py  models.py  routes.py
probeops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
probeops/services/: __init__.py  auth.py  probe.py
probeops/templates/: dashboard.html  landing.html
public/: simplified_rbac.md
scripts/: deploy.sh
templates/: docs.html  index.html
tests/: __init__.py  test_api.py
