[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probeops"
version = "1.0.0"
description = "Network Diagnostics API with JWT Authentication and API Keys"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ProbeOps Team" }
]
dependencies = [
    "flask>=2.2.0",
    "flask-cors>=3.0.0",
    "flask-limiter>=3.3.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-migrate>=4.0.0",
    "psycopg2-binary>=2.9.0",
    "pyjwt>=2.6.0",
    "passlib>=1.7.0",
    "werkzeug>=2.2.0",
    "python-dotenv>=0.20.0",
    "sqlalchemy>=2.0.0",
    "gunicorn>=21.0.0",
    "requests>=2.20.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[tool.setuptools]
packages = ["probeops"]
script-files = ["manage.py"]

[tool.setuptools.package-data]
"*" = ["*.md"]
